--- a/make.html
+++ b/make.html
@@ -65,10 +65,10 @@
     $("#add-btn").on("click", function(event) {
       event.preventDefault();
       var newReservation = {
-        name: $("#name").val().trim(),
-        number: $("#number").val().trim(),
-        size: $("#size").val().trim(),
-        email: $("#email").val().trim()
+        group_name: $("#name").val().trim(),
+        phone_number: $("#number").val().trim(),
+        group_size: $("#size").val().trim(),
+        group_email: $("#email").val().trim()
       };
 
       $.post("/api/new", newReservation)
